# test_crew_ai

./: .env.template  .gitignore  README.md  pyproject.toml
src/: main.py
src/sql_query_crew_formation_and_task_coordination/: crew.py  main.py
src/sql_query_crew_formation_and_task_coordination/config/: agents.yaml  tasks.yaml
src/support/: chat_session.py  sales_db.py  settings.py
